@@ -1,5 +1,5 @@
 class Tag < ActiveRecord::Base
-  has_many :taggings,  :as => :taggable
+  has_many :taggings
   has_many :taggables, :through => :taggings
-  has_one  :tagging,   :as => :taggable
+  has_one  :tagging
 end
